<resources>

    <string name="app_name">Recettes</string>
    <string name="facebook_app_id">2061269780848366</string>
    <string name="fb_login_protocol_scheme">fb2061269780848366</string>


    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_setting">Setting</string>
    <string name="recipe_description">Bún đậu mắm tôm là món ăn đơn giản, dân dã trong ẩm thực miền Bắc Việt Nam. ... Thành phần chính gồm có bún tươi, đậu hũ rán vàng, chả cốm, nem chua, mắm tôm pha chanh, ớt và ăn kèm với các loại rau thơm như tía tô, kinh giới, rau húng, xà lách, cà pháo...</string>
    <string name="direction">Direction</string>
    <string name="ingredient">Ingredient</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="image">Image</string>
</resources>
