<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:paddingEnd="16dp"
        android:paddingBottom="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imv_avatar"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/tv_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                style="@style/title3"
                android:clickable="true"
                android:gravity="start"
                android:focusable="true"
                tools:text="Tran Van Dinh" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/title1"
            android:textColor="@color/colorOrange"
            android:layout_marginTop="4dp"
            tools:text="Bun dau mam tom" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp_images"
            android:layout_width="match_parent"
            android:layout_height="200dp">
        </androidx.viewpager.widget.ViewPager>

        <TextView
            android:id="@+id/tv_recipe_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/body2"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            tools:text="@string/recipe_description" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/colorBlue2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/tv_directions"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                style="@style/title2"
                android:textColor="@color/colorOrange"
                android:text="@string/direction" />

            <TextView
                android:id="@+id/tv_ingredient"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                style="@style/title2"
                android:textColor="@color/colorBlue3"
                android:text="@string/ingredient" />

            <TextView
                android:id="@+id/tv_comment"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:textColor="@color/colorBlue3"
                style="@style/title2"
                android:text="@string/comment" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
        </LinearLayout>
    </LinearLayout>
</ScrollView>